--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 <div class="curtain_right"></div>
 
 <!--Navbar Starts here-->
-<nav id="top" class="navbar navbar-dark nav_linear_grad">
+<nav id="top" class="navbar navbar-dark nav_linear_grad q">
     <img class="img-one" src="https://img.icons8.com/bubbles/50/000000/popcorn-time.png"/>
     <a class="milk navbar-brand font bigText marginL">NMT Movie Accord</a>
     <form class="form-inline">
